fix: correction alignements dates et tags #213

--- a/web/themes/custom/openig/scss/_newsletter.scss
+++ b/web/themes/custom/openig/scss/_newsletter.scss
@@ -408,19 +408,15 @@ html, body{
       display: none;
     }
     .field--name-field-tag {
-      display: flex;
-      .field__item {
-        border: 1px solid #C2DB7E;
-        border-radius: 21px;
-        padding: 3px 10px;
-        margin-top: 10px;
-        margin-bottom: 15px;
-        margin-right: 10px;
-      }
+      //display: flex;
+      border: 1px solid #C2DB7E;
+      border-radius: 21px;
+      padding: 3px 10px;
+      margin-right: 10px;
     }
     .date_newsletter{
       width: 100%;
-      display: flex;
+      //display: flex;
     }
     .field--name-created, .field--name-field-dates{
       display: block;
